# shepherd

./: .gitignore  .gitmodules  BUILD.md  BUILD_REQUIREMENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.simple  EVICTION_FIX_SUMMARY.md  EVICTION_TEST_PLAN.md  LICENSE  LLAMA_3_IMPLEMENTATION.md  LLAMA_3_JSON_TOOLS_FINAL.md  LLAMA_3_PDF_COMPLIANT.md  LLAMA_3_TOOL_FORMAT_FIX.md  MOE.md  Makefile  Makefile.save  PLAN.md  README.md  RULES.md  TENSORRT_EVICTION_IMPLEMENTATION.md  TENSORRT_INTEGRATION.md  TENSORRT_KV_CACHE_EVENTS.md  TENSORRT_SUCCESS.md  TENSORRT_SUMMARY.md  ansi.h  auth.cpp  auth.h  auth_pg.cpp  auth_pg.h  azure_msi.cpp  azure_msi.h  b  backend.cpp  backend.h  backend_interface.h  backend_manager.cpp  backend_manager.h  build_and_run.py  (+133 more)
.deps/: cli.d  config.d  http_client.d  logger.d  main.d  rag.d  session.d
.deps/api_tools/: api_tool_adapter.d  api_tool_config.d  api_tools.d
.deps/backends/: anthropic.d  api.d  backend.d  factory.d  gemini.d  llamacpp.d  models.d  ollama.d  openai.d
.deps/mcp/: mcp.d  mcp_client.d  mcp_config.d  mcp_server.d  mcp_tool.d
.deps/server/: server.d
.deps/tools/: command_tools.d  core_tools.d  filesystem_tools.d  http_tools.d  json_tools.d  mcp_resource_tools.d  memory_tools.d  tool.d  tool_parser.d  utf8_sanitizer.d  web_search.d
.github/workflows/: release.yml
api_tools/: api_tool_adapter.cpp  api_tool_adapter.h  api_tool_config.cpp  api_tool_config.h  api_tools.cpp  api_tools.h
backends/: anthropic.cpp  anthropic.cpp.bak  anthropic.h  anthropic.md  api.cpp  api.h  api.md  api_backend.cpp  api_backend.h  backend.cpp  backend.h  channel_parser.cpp  channel_parser.h  chat_template.cpp  chat_template.h  chat_template.md  cli_client.cpp  cli_client.h  factory.cpp  factory.h  gemini.cpp  gemini.cpp.backup  gemini.h  gemini.md  generic_parser.cpp  generic_parser.h  gpu.cpp  gpu.h  grok.cpp  grok.cpp.backup  grok.cpp.bak  grok.h  harmony.cpp  harmony.h  harmony_parser.cpp  harmony_parser.h  llamacpp.cpp  llamacpp.h  llamacpp.md  models.cpp  (+17 more)
docs/: anthropic.md  api_server.md  architecture.md  auth.md  backends.md  chat_template.md  cli.md  cli_server.md  cliserver.md  commands.md  frontend.md  gemini.md  generation_thread.md  grok.md  input_reader.md  llamacpp.md  mcp.md  memory.md  memory_extraction.md  models.md  openai.md  output.md  provider.md  rag.md  rag_context.md  refactor-plan.md  scheduler.md  server.md  session.md  session_manager.md  tensorrt-setup.md  tensorrt.md  terminal_io.md  testing.md  testing_manual_checklist.md  tui.md  utf8_sanitizer.md
frontends/: anthropic_server.cpp  anthropic_server.h  api_server.cpp  api_server.h  cli.cpp  cli.h  cli_server.cpp  cli_server.h  client_output.cpp  client_output.h  json_frontend.cpp  json_frontend.h  json_frontend.md  openapi_server.cpp  openapi_server.h  tui.cpp  tui.h
include/: httplib.h
include/tensorrt_llm/executor/: version.h
mcp/: mcp.cpp  mcp.h  mcp_client.cpp  mcp_client.h  mcp_config.cpp  mcp_config.h  mcp_manager.cpp  mcp_manager.h  mcp_server.cpp  mcp_server.h  mcp_tool.cpp  mcp_tool.h
packaging/: postinst  postrm  prerm
patches/: apply-llama-patches.sh  llama.patch  llama.patch.fixed  llama.patch.merged  llama.patch.new  replxx-build-fixes.patch  tensorrt-llm-disable-userbuffers.patch
rag/: database_backend.h  database_factory.cpp  postgresql_backend.cpp  postgresql_backend.h  rag.md  sqlite_backend.cpp  sqlite_backend.h
scripts/: api_bench.py  b  bench_coder.sh  bench_gptoss.sh  build_engine.py  check_alloc.cu  convert_ct_to_awq.md  convert_ct_to_awq.py  fetch-tensorrt-headers.sh  hfquant.py  human_eval.py  openai_bench.py  q  requirements.txt  swebench_safety_wrapper.sh  test_clyde.int.c  test_eviction.py  test_model.py  test_p2p.cu  test_p2p_all  test_p2p_all.cu  test_p2p_backup.cu  test_p2p_cpp.cu  test_p2p_debug.cu  test_p2p_direct.cu  test_p2p_pull.cu  tpbench.py
server/: README.md  api_server.cpp  api_server.h  api_server.py  cli_server.cpp  cli_server.h  control.cpp  control.h  server.cpp  server.h
templates/: glm4.jinja
tests/: CMakeLists.txt  Makefile  test_stubs.cpp
tests/helpers/: temp_dir.h  test_helpers.h
tests/integration/: test_api_server.py  test_cli_commands.py  test_cli_server.py
tests/scripts/: run_integration_tests.sh
tests/tools/: test_tools_manager.cpp
tests/unit/: test_auth.cpp  test_channel_parser.cpp  test_chat_template.cpp  test_config.cpp  test_harmony.cpp  test_message.cpp  test_models.cpp  test_providers.cpp  test_scheduler.cpp  test_session.cpp  test_sse_parser.cpp
tools/: api_tools.cpp  api_tools.h  command_tools.cpp  command_tools.h  core_tools.cpp  core_tools.h  filesystem_tools.cpp  filesystem_tools.h  http_tools.cpp  http_tools.h  json_schema.cpp  json_schema.h  json_tools.cpp  json_tools.h  mcp_resource_tools.cpp  mcp_resource_tools.h  memory_tools.cpp  memory_tools.h  remote_tools.cpp  remote_tools.h  scheduler_tools.cpp  scheduler_tools.h  tokenize_helper.py  tool.cpp  tool.h  tool_parser.cpp  tool_parser.h  tools.cpp  tools.h  tools.md  utf8_sanitizer.cpp  utf8_sanitizer.h  web_search.cpp  web_search.h
